fix style.css spacing

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ html, body {
     position: fixed; 
     top: 0;
     left: 0;
-    border-right: 1px solid #ababab;
+    border-right: 1px solid #eaeaea;
     overflow-y: auto;
     display: flex;
     align-items: center;
